--- a/template/config/lti_settings.yml.template
+++ b/template/config/lti_settings.yml.template
@@ -1,9 +1,7 @@
 production:
-  url: http://127.0.0.1:8080
-  namespace: my_app_production
+  consumer_key: prod_consumer_key
+  consumer_secret: prod_consumer_secret
 
 development:
-  launch_url: http://localhost:3000/launch/index
-  namespace: lti_example
   consumer_key: consumer_key
   consumer_secret: consumer_secret
