--- a/template/Gemfile
+++ b/template/Gemfile
@@ -12,6 +12,8 @@ gem 'rails', '~> 6.0.2'
 gem 'sqlite3'
 # Use Puma as the app server
 gem 'puma', '~> 4.3'
+
+gem 'oauth'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 6.0'
 # Use Uglifier as compressor for JavaScript assets
